--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./assets/images/Escudo.png">
+    <title>San Lorenzo - Sitio Oficial</title>
 </head>
 <body>
+    <div id="container">
+        <header>
+            <img src="./assets/images/Escudo.png" alt="logo">
+            <nav id="nav1">
+                <a href="#">Fútbol</a>
+            </nav>
+            <nav id="nav2">
+                <a href="#">Institucional</a>
+            </nav>
+            <nav id="nav3">
+                <a href="#">Socios</a>
+            </nav>
+            <nav id="nav4">
+                <a href="#">Polideportivo</a>
+            </nav>
+            <p class="texto" id="frason" >" A San Lorenzo hay que defenderlo todos los días, todo el tiempo y en todos los ámbitos"</p>
+            <p class="texto" id="bienvenida"> Bienvenidos al Sitio Oficial del Club Atlético San Lorenzo de Almagro. Toda la información del fútbol profesional y todas las actividades del club.</p>
+        </header>
+
+    </div>
     
 </body>
 </html>
