Primer vista mobile

--- a/index.html
+++ b/index.html
@@ -26,8 +26,41 @@
             <p class="texto" id="frason" >" A San Lorenzo hay que defenderlo todos los días, todo el tiempo y en todos los ámbitos"</p>
             <p class="texto" id="bienvenida"> Bienvenidos al Sitio Oficial del Club Atlético San Lorenzo de Almagro. Toda la información del fútbol profesional y todas las actividades del club.</p>
         </header>
+        <section id="ingreso">
+            <form action="#" method="get" enctype="application/x-www-form-urlencoded">
+                <label for="nombre"> Nombre</label>
+               <input type="text" name="nombre"> <br>
+               <label for="contraseña">Contraseña</label>
+               <input type="password" name="contraseña" id=""><br>
+               <input type="submit" value="Ingresa a tu cuenta">
+               </form>
+        </section>
+        <aside class="proxpartido"> 
+            <p id="titul">Copa Liga Profesional</p>
+            <img src="./assets/images/Escudo.png" alt="logo2">
+            <p id="prim"> VS</p>
+            <img src="./assets/images/quema.png" alt="quema">
+            <p id="seg">30/9/2023 Nuevo Gasómetro 16hs vs Huracán</p>
+        </aside>
 
-    </div>
+        <div id="titnot">
+            <p id="notdest">Noticias destacadas del Ciclón</p>
+        </div>
+        <section id="noticias">
+        <img src="./assets/images/noti1.jpg" alt="noti1">
+        <p>EMPATE ANTE TIGRE
+            San Lorenzo igualó 0-0 en Victoria</p>
+        <img src="./assets/images/noti 2.jpg" alt="noti2">
+        <p> ¡SACA TU ABONO PARA LA COPA DE LA LIGA!</p>
+        <img src="./assets/images/noti3.jpeg" alt="noti3">
+        <p> A PASO FIRME El voley femenino sigue en lo más alto del torneo</p>
+        <img src="./assets/images/noti4.jpg" alt="noti4">
+        <p>FORMILIANO PUSO LA FIRMA Y SAN LORENZO SUMA OTRO REFUERZO</p>
+        </section>
+        
+
+
+        </div>
     
 </body>
 </html>
