media para pag1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <header>
+        <header id="head1">
             <img src="./assets/images/Escudo.png" alt="logo">
             <nav id="nav1">
                 <a href="#">Fútbol</a>
@@ -36,11 +36,11 @@
                </form>
         </section>
         <aside class="proxpartido"> 
-            <p id="titul">Copa Liga Profesional</p>
+            <p class="proxpartido"id="titul">Copa Liga Profesional</p>
             <img src="./assets/images/Escudo.png" alt="logo2">
-            <p id="prim"> VS</p>
+            <p class="proxpartido"id="prim"> VS</p>
             <img src="./assets/images/quema.png" alt="quema">
-            <p id="seg">30/9/2023 Nuevo Gasómetro 16hs vs Huracán</p>
+            <p class="proxpartido" id="seg">30/9/2023 Nuevo Gasómetro 16hs vs Huracán</p>
         </aside>
 
         <div id="titnot">
@@ -48,14 +48,14 @@
         </div>
         <section id="noticias">
         <img src="./assets/images/noti1.jpg" alt="noti1">
-        <p>EMPATE ANTE TIGRE
+        <p class="desnot">EMPATE ANTE TIGRE
             San Lorenzo igualó 0-0 en Victoria</p>
         <img src="./assets/images/noti 2.jpg" alt="noti2">
-        <p> ¡SACA TU ABONO PARA LA COPA DE LA LIGA!</p>
+        <p class="desnot"> ¡SACA TU ABONO PARA LA COPA DE LA LIGA!</p>
         <img src="./assets/images/noti3.jpeg" alt="noti3">
-        <p> A PASO FIRME El voley femenino sigue en lo más alto del torneo</p>
+        <p class="desnot"> A PASO FIRME El voley femenino sigue en lo más alto del torneo</p>
         <img src="./assets/images/noti4.jpg" alt="noti4">
-        <p>FORMILIANO PUSO LA FIRMA Y SAN LORENZO SUMA OTRO REFUERZO</p>
+        <p class="desnot">FORMILIANO PUSO LA FIRMA Y SAN LORENZO SUMA OTRO REFUERZO</p>
         </section>
         
 
