--- a/pages/pag1.html
+++ b/pages/pag1.html
@@ -39,7 +39,8 @@
         </nav>
       </header>
       <p id="nunca">¿Nunca viniste? ¡Hacé click sobre la imagen y enterate cómo!</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.1042576713303!2d-58.44269512553293!3d-34.65206986005116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbbf80977ed5%3A0xb7eedcbe4a3ab64e!2sEstadio%20Pedro%20Bidegain!5e0!3m2!1ses!2sar!4v1695824618000!5m2!1ses!2sar"  style="border: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+    <section id="mediu">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.1042576713303!2d-58.44269512553293!3d-34.65206986005116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbbf80977ed5%3A0xb7eedcbe4a3ab64e!2sEstadio%20Pedro%20Bidegain!5e0!3m2!1ses!2sar!4v1695824618000!5m2!1ses!2sar"  style="border: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
     <aside id="juego">
       <h1> ¡Juego de la semana! ¿Quien es el máximo goleador de la historia del club?</h1>
       <form action="#" method="get" enctype="application/x-www-form-urlencoded">
@@ -52,26 +53,27 @@
        <input type="submit" value="Envía y sumá puntos para ganarte una sorpresa increíble">
       </form>
     </aside>
+</section>
     <h2>Tienda Online 
         Mirá todos nuestros productos, llamanos para consultar talles!
     </h2>
     <a id="tienda">
         <img src="../assets/images/titular.webp" alt="titu">
-        <p>Camiseta Titular 2023 $30000</p>
+        <p class="descri" id="textitu">Camiseta Titular 2023 $30000</p>
         <img src="../assets/images/camiseta suplente.webp" alt="suple">
-                <p>Camiseta Suplente 2023 $30000</p>
+                <p class="descri" id="texsup">Camiseta Suplente 2023 $30000</p>
         <img src="../assets/images/camisetanegra.png" alt="negra">
-                <p>Tercera Camiseta 2023 $30000</p>
+                <p class="descri" id="textres">Tercera Camiseta 2023 $30000</p>
             <img src="../assets/images/remera.webp" alt="urbana">
-                <p>Remera urbana de algodón $8000</p>
+                <p class="descri" id="texrem">Remera urbana de algodón $8000</p>
             <img src="../assets/images/buzo.png" alt="buzo">
-        <p> Buzo urbano de algodón $15000</p>
+        <p class="descri" id="texbuz"> Buzo urbano de algodón $15000</p>
             <img src="../assets/images/bebe.webp" alt="bebe">
-        <p>Body para tu bebé $9000</p>
+        <p class="descri" id="texbebe">Body para tu bebé $9000</p>
             <img src="../assets/images/mochi.png" alt="mochi">
-        <p>Mochila escolar $12000</p>
+        <p class="descri" id="texmoch">Mochila escolar $12000</p>
             <img src="../assets/images/short-camiseta-blanco-2023.webp" alt="short">
-        <p>Short Deportivo 2023 $15000</p>
+        <p class="descri" id="texshor">Short Deportivo 2023 $15000</p>
             
     </a>
 </div>
