--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
     <div id="container">
         <header id="head1">
             <img src="./assets/images/Escudo.png" alt="logo">
-            <nav id="nav1">
+            <nav  class="navs" id="nav1">
                 <a href="#">Fútbol</a>
             </nav>
-            <nav id="nav2">
+            <nav class="navs" id="nav2">
                 <a href="#">Institucional</a>
             </nav>
-            <nav id="nav3">
+            <nav class="navs" id="nav3">
                 <a href="#">Socios</a>
             </nav>
-            <nav id="nav4">
+            <nav class="navs" id="nav4">
                 <a href="#">Polideportivo</a>
             </nav>
             <p class="texto" id="frason" >" A San Lorenzo hay que defenderlo todos los días, todo el tiempo y en todos los ámbitos"</p>
             <p class="texto" id="bienvenida"> Bienvenidos al Sitio Oficial del Club Atlético San Lorenzo de Almagro. Toda la información del fútbol profesional y todas las actividades del club.</p>
         </header>
+
+        <div id="secondo">
         <section id="ingreso">
             <form action="#" method="get" enctype="application/x-www-form-urlencoded">
                 <label for="nombre"> Nombre</label>
@@ -42,20 +44,20 @@
             <img src="./assets/images/quema.png" alt="quema">
             <p class="proxpartido" id="seg">30/9/2023 Nuevo Gasómetro 16hs vs Huracán</p>
         </aside>
-
+        </div>
         <div id="titnot">
             <p id="notdest">Noticias destacadas del Ciclón</p>
         </div>
         <section id="noticias">
         <img src="./assets/images/noti1.jpg" alt="noti1">
-        <p class="desnot">EMPATE ANTE TIGRE
+        <p class="desnot" id="desnot1">EMPATE ANTE TIGRE
             San Lorenzo igualó 0-0 en Victoria</p>
         <img src="./assets/images/noti 2.jpg" alt="noti2">
-        <p class="desnot"> ¡SACA TU ABONO PARA LA COPA DE LA LIGA!</p>
+        <p class="desnot" id="desnot2"> ¡SACA TU ABONO PARA LA COPA DE LA LIGA!</p>
         <img src="./assets/images/noti3.jpeg" alt="noti3">
-        <p class="desnot"> A PASO FIRME El voley femenino sigue en lo más alto del torneo</p>
+        <p class="desnot" id="desnot3"> A PASO FIRME El voley femenino sigue en lo más alto del torneo</p>
         <img src="./assets/images/noti4.jpg" alt="noti4">
-        <p class="desnot">FORMILIANO PUSO LA FIRMA Y SAN LORENZO SUMA OTRO REFUERZO</p>
+        <p class="desnot" id="desnot4">FORMILIANO PUSO LA FIRMA Y SAN LORENZO SUMA OTRO REFUERZO</p>
         </section>
         
 
